syntax = "proto3";

package sgenetwork.sge.reward;

import "gogoproto/gogo.proto";
import "sgenetwork/sge/reward/campaign.proto";
import "sgenetwork/sge/reward/params.proto";
import "sgenetwork/sge/reward/promoter.proto";
import "sgenetwork/sge/reward/reward.proto";

option go_package = "github.com/sge-network/sge/x/legacy/reward/types";

// GenesisState defines the reward module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated Campaign campaign_list = 2 [ (gogoproto.nullable) = false ];
  repeated Reward reward_list = 3 [ (gogoproto.nullable) = false ];
  repeated RewardByCategory reward_by_category_list = 4
      [ (gogoproto.nullable) = false ];
  repeated RewardByCampaign reward_by_campaign_list = 5
      [ (gogoproto.nullable) = false ];
  repeated Promoter promoter_list = 6 [ (gogoproto.nullable) = false ];
  repeated PromoterByAddress promoter_by_address_list = 7
      [ (gogoproto.nullable) = false ];
}
